not freed memory blocks on regular exiting #48027

Closed
opened 2016-04-01 12:11:15 +02:00 by Norbert Krieg · 17 comments

System Information
Linux 64 Debian Jessie - NVidia GTX 660 Ti

Blender Version
Broken: 2.77 (release), 2.76b

Short description of error
after quitting a fresh installation of the actual blender release via Ctrl-Q
an error occurs in the command line:

...
Error: Not freed memory blocks: 2, total unfreed memory 0.000732 MB

Blender quit

Exact steps for others to reproduce the error
with a fresh installation, without copying earlier setups

  1. call freshly installed blender from release download
  2. save user settings (to produce the 2.77 folder and subfolders etc)
  3. exit blender
  4. call blender
  5. exit via Ctrl-Q
  • Error: Not freed memory blocks: 2, total unfreed memory 0.000732 MB

  1. call blender
  2. quit blender via closing window button of OS
  • no error
    Funny....
    Probably some different treatment of the quitting processes... ??

**System Information** Linux 64 Debian Jessie - NVidia GTX 660 Ti **Blender Version** Broken: 2.77 (release), 2.76b **Short description of error** after quitting a fresh installation of the actual blender release via Ctrl-Q an error occurs in the command line: > ... > Error: Not freed memory blocks: 2, total unfreed memory 0.000732 MB > > Blender quit **Exact steps for others to reproduce the error** with a fresh installation, without copying earlier setups 1. call freshly installed blender from release download 2. save user settings (to produce the 2.77 folder and subfolders etc) 3. exit blender 4. call blender 5. exit via Ctrl-Q - > Error: Not freed memory blocks: 2, total unfreed memory 0.000732 MB 6. call blender 7. quit blender via closing window button of OS - > no error Funny.... Probably some different treatment of the quitting processes... ??
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @nobi08

Added subscriber: @nobi08

Added subscriber: @mont29

Added subscriber: @mont29

This needs a win dev to check… probably some missing memfree in specific windows quit handling?

This needs a win dev to check… probably some missing memfree in specific windows quit handling?

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Can't redo this bug.
Tested on Windows7, official 2.77 release and master (d91316dc67)

Can't redo this bug. Tested on Windows7, official 2.77 release and master (d91316dc672dc1ee69fbd24d2f00124a24b75c6b)

Added subscriber: @sindra1961

Added subscriber: @sindra1961

When I confirmed a report #48057 , it occurred only once.
I ran blender with --factory-startup option.

Windows 10 Pro 64bits
Blender version: 2.77 (sub 0), commit date: 2016-04-04 23:20, hash: 9c952bb

When I confirmed a report [#48057 ](https://developer.blender.org/T48057), it occurred only once. I ran blender with --factory-startup option. Windows 10 Pro 64bits Blender version: 2.77 (sub 0), commit date: 2016-04-04 23:20, hash: 9c952bb
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

I'm also unsuccessful full in reproducing this one. Why is this tagged windows? original report came in on Linux 64 Debian Jessie ?

I'm also unsuccessful full in reproducing this one. Why is this tagged windows? original report came in on Linux 64 Debian Jessie ?

Added subscriber: @VukGardasevic

Added subscriber: @VukGardasevic

I've reproduced the bug on several builds from 2.57 to recent ones.

Run Blender with -d --factory-startup go directly to the File > Quit menu.

Accessing it from the Ctrl + Q shortcut doesn't cause the leak.

memory_leak732.txt

Win 7 64 bit.

I've reproduced the bug on several builds from 2.57 to recent ones. Run Blender with ` -d --factory-startup` go directly to the `File > Quit` menu. Accessing it from the Ctrl + Q shortcut doesn't cause the leak. [memory_leak732.txt](https://archive.blender.org/developer/F415170/memory_leak732.txt) Win 7 64 bit.
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Julian Eisel self-assigned this 2017-02-13 14:39:42 +01:00
Member

Can easily recreate this using steps mentioned by @lijenstina.

Can easily recreate this using steps mentioned by @lijenstina.

Note: after some further testing related to a bug report, setting the operator_context in the space_info.py to EXEC_AREA causes the issue. If a confirmation pop-up is called, there is no memory leak.

        layout.operator_context = 'EXEC_AREA'
        if bpy.data.is_dirty and context.user_preferences.view.use_quit_dialog:
            layout.operator_context = 'INVOKE_SCREEN'  # quit dialog
Note: after some further testing related to a bug report, setting the operator_context in the `space_info.py` to **EXEC_AREA** causes the issue. If a confirmation pop-up is called, there is no memory leak. ``` layout.operator_context = 'EXEC_AREA' if bpy.data.is_dirty and context.user_preferences.view.use_quit_dialog: layout.operator_context = 'INVOKE_SCREEN' # quit dialog ```

This issue was referenced by 4cb4556fa5

This issue was referenced by 4cb4556fa5ba78fff69cf2f6cb1d156d1705a5c5
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48027
No description provided.